--- a/css/index.css
+++ b/css/index.css
@@ -153,8 +153,18 @@ body{
    }
    
    /*Fin Estilos Main*/
-   
-   
+   .fondo{background-color: #1853c0;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+  }
+   table{
+    color: black;
+   }
+   .agregado{
+    padding-top: 10px;
+   text-align: right;
+   }
    /*Estilos footer*/
    footer{
        display: flex;
